cornellX instruction z-index bug

--- a/richreview/public/webapps/richreview/stylesheets/style.css
+++ b/richreview/public/webapps/richreview/stylesheets/style.css
@@ -1283,7 +1283,7 @@ div.tooltip_audio_waveform div.arrow_up {
   padding: 2em;
   padding-bottom: 0;
   -webkit-user-select: all;
-  z-index: 100;
+  z-index: 8;
 }
 
 #cornellx_inst > h2{
